--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#00feba">
     <meta name="description" content="Weather forecast application with real-time updates">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Weather App</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
